--- a/captrue/package.json
+++ b/captrue/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "get.js",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3"
+    "cheerio": "^1.0.0-rc.3",
+    "iconv": "^2.3.5",
+    "iconv-lite": "^0.5.0"
   },
   "devDependencies": {},
   "scripts": {
