--- a/captrue/package.json
+++ b/captrue/package.json
@@ -5,6 +5,7 @@
   "main": "get.js",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "ejs": "^3.0.1",
     "iconv": "^2.3.5",
     "iconv-lite": "^0.5.0"
   },
